@@ -6,5 +6,7 @@ Version 1.1:
     - Refactored code into OO form for gantt chart
     - Allow use of other types of cairo surfaces
     - Added support for Bar Plots
+    - Added rounded corners and pseudo 3D option to Bar Plots
     - Added support for Donut Plots
+    - Added support for Function Plots
 
